--- a/solar-system/solar-system-deploy-all.yaml
+++ b/solar-system/solar-system-deploy-all.yaml
@@ -3,35 +3,6 @@ kind: Namespace
 metadata:
   name: solar-system
 ---
-apiVersion: cert-manager.io/v1
-kind: Issuer
-metadata:
-  name: solar-system-selfsigned-issuer
-  namespace: solar-system
-spec:
-  selfSigned: {}
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: solar-system-selfsigned-cert
-  namespace: solar-system
-spec:
-  isCA: true
-  commonName: solarsystem.cloudapps.corp.internal
-  secretName: solar-system-cert-tls
-  dnsNames:
-    - solarsystem.cloudapps.corp.internal
-  duration: 8760h
-  renewBefore: 240h
-  privateKey:
-    algorithm: ECDSA
-    size: 256
-  issuerRef:
-    name: solar-system-selfsigned-issuer
-    kind: Issuer
-    group: cert-manager.io
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -40,7 +11,7 @@ metadata:
   name: solar-system
   namespace: solar-system
 spec:
-  replicas: 5
+  replicas: 2
   selector:
     matchLabels:
       app: solar-system
@@ -51,7 +22,7 @@ spec:
         app: solar-system
     spec:
       containers:
-      - image: siddharth67/solar-system:v9
+      - image: harborsupervisor.vkslab.internal/library/solar-system:v9
         name: solar-system
         imagePullPolicy: IfNotPresent
         ports:
@@ -71,29 +42,5 @@ spec:
     targetPort: 80 #change to 80
   selector:
     app: solar-system
-  type: ClusterIP
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: solar-system-ingress
-  namespace: solar-system
-  labels:
-    app: solar-system
-spec:
-  tls:
-  - hosts:
-      - solarsystem.cloudapps.corp.internal
-    secretName: solar-system-cert-tls
-  rules:
-    - host: solarsystem.cloudapps.corp.internal
-      http:
-        paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: solar-system-service
-              port:
-                number: 80
+  type: LoadBalancer
 
